--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <!-- Cart Total Display -->
                 <div>
-                    <span class="cart-total subtotal-value">0.00 ৳</span>
+                    <span class="cart-total subtotal-value">0.00৳</span>
                 </div>
             </div>
         </div>
@@ -97,8 +97,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">Menu</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"><i
-                    class="bi bi-x-lg"></i></button>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <ul class="navbar-nav">
@@ -111,6 +110,8 @@
             </ul>
         </div>
     </div>
+
+
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -175,7 +176,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_1.jpg" alt="Product 1">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream <span class="weight">- 100ml</span> </h5>
+                        <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream <span
+                                class="weight">- 100ml</span> </h5>
 
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <div class="old-price">13.00৳</div>
@@ -192,8 +194,10 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_2.jpg" alt="Product 2">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner <span class="weight">- 150ml</span> </h5>
-                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">                            <!-- <div class="old-price">25.00৳</div> -->
+                        <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner <span
+                                class="weight">- 150ml</span> </h5>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">20.00৳</div>
                         </div>
                         <!-- <p class="card-text text-end">20 ৳</p> -->
@@ -205,7 +209,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_3.jpg" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence <span class="weight">- 100ml</span> </h5>
+                        <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence <span
+                                class="weight">- 100ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">30.00৳</div>
@@ -219,7 +224,8 @@
                 <div class="product-card card h-100 h-100" id="bor">
                     <img src="./Product Images/prd_4.jpg" alt="Product 4">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum <span class="weight">- 20ml</span> </h5>
+                        <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum <span class="weight">-
+                                20ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">40.00৳</div>
@@ -233,7 +239,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_5.jpg" alt="Product 5">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser <span class="weight">- 150ml</span> </h5>
+                        <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser <span
+                                class="weight">- 150ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">50.00৳</div>
@@ -247,7 +254,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_6.jpg" alt="Product 6">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser <span class="weight">- 200ml</span> </h5>
+                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser <span class="weight">-
+                                200ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">60.00৳</div>
@@ -275,7 +283,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_8.jpg" alt="Product 8">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream <span class="weight">- 50ml</span> </h5>
+                        <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream <span class="weight">-
+                                50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">80.00৳</div>
@@ -289,7 +298,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_9.webp" alt="Product 9">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ <span class="weight">- 70ml</span> </h5>
+                        <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ <span
+                                class="weight">- 70ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">90.00৳</div>
@@ -303,7 +313,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_10.jpg" alt="Product 10">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ <span class="weight">- 50ml</span> </h5>
+                        <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ <span
+                                class="weight">- 50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">100.00৳</div>
@@ -317,7 +328,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_11.jpg" alt="Product 11">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream <span class="weight">- 50ml</span> </h5>
+                        <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream <span
+                                class="weight">- 50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">110.00৳</div>
@@ -331,7 +343,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_12.webp" alt="Product 12">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum <span class="weight">- 5gm</span> </h5>
+                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum <span
+                                class="weight">- 5gm</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">120.00৳</div>
@@ -375,12 +388,12 @@
             </tr>
             <tr>
                 <td colspan="3" class="text-end">Delivery charges:</td>
-                <td class="delivery-charge">60 ৳</td>
+                <td class="delivery-charge">60.00৳</td>
                 <td></td>
             </tr>
             <tr>
                 <td colspan="3" class="text-end">Total:</td>
-                <td class="cart-total-value">0 ৳</td>
+                <td class="cart-total-value">0৳</td>
                 <td></td>
             </tr>
         </tfoot>
@@ -740,11 +753,15 @@
                 </p>
                 <div class="row row-cols-4 gy-4">
 
-                    <div class="col-3"><button class="ico-box"><i class="fa-brands fa-facebook-f"
-                                style="color: #ffffff;"></i></button></div>
+                    <div class="col-3"><a href="https://www.facebook.com/profile.php?id=61553616282600"><button
+                                class="ico-box"><i class="fa-brands fa-facebook-f"
+                                    style="color: #ffffff;"></i></button></a></div>
+                    <div class="col-3">
+                        <a href="https://www.instagram.com/shalikbeauty007?igsh=MXJ4ZWE3cWhyc3p1dw%3D%3D&utm_source=qr"><button
+                                class="ico-box"><i class="fa-brands fa-instagram"
+                                    style="color: #ffffff;"></i></button></a>
+                    </div>
                     <div class="col-3"><button class="ico-box"><i class="fa-brands fa-google-plus-g"
-                                style="color: #ffffff;"></i></button></div>
-                    <div class="col-3"><button class="ico-box"><i class="fa-brands fa-instagram"
                                 style="color: #ffffff;"></i></button></div>
 
                     <!-- <div class="col icon-box"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></div>
