--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shalik Glow Corner</title>
+    <title>Shalik Glow Corner Test</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -78,7 +78,9 @@
             <div class="d-flex align-items-center ms-auto">
                 <!-- Cart Icon with Badge -->
                 <a class="nav-link position-relative me-3" href="#">
-                    <i class="bi bi-cart"></i>
+                    <button class="cart-button" data-bs-toggle="modal" data-bs-target="#cartModal"><i class="bi bi-cart"></i></button>
+
+                    
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                         <span class="cart-badge">0</span>
                         <span class="visually-hidden">unread messages</span>
@@ -365,49 +367,60 @@
 
 </div>
 
-<div class="container cart-container" id="cart-container" style="display: none;">
-    <h2>Cart</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Product</th>
-                <th>Price</th>
-                <th style="width: 50px;">Quantity</th>
-                <th>Subtotal</th> <!-- Changed "Total" to "Subtotal" -->
-                <th></th>
-            </tr>
-        </thead>
-        <tbody id="cart-items">
-            <!-- Cart items will be inserted here -->
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3" class="text-end">Subtotal:</td> <!-- Updated colspan to 3 -->
-                <td class="subtotal-value">0 ৳</td> <!-- Added placeholder for subtotal -->
-                <td></td>
-            </tr>
-            <tr>
-                <td colspan="3" class="text-end">Delivery charges:</td>
-                <td class="delivery-charge">60.00৳</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td colspan="3" class="text-end">Total:</td>
-                <td class="cart-total-value">0৳</td>
-                <td></td>
-            </tr>
-        </tfoot>
-    </table>
-    <!-- <div class="container delivery-container mt-3">
-            <label for="delivery-location">Delivery Location:</label>
-            <select id="delivery-location" onchange="updateDeliveryCharge()">
+<!-- Cart Modal -->
+<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="cartModalLabel">Cart</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Quantity</th>
+                  <th>Subtotal</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="cart-items">
+                <!-- Cart items will be inserted here -->
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="3" class="text-end">Subtotal:</td>
+                  <td class="subtotal-value">0 ৳</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td colspan="3" class="text-end">Delivery charges:</td>
+                  <td class="delivery-charge">60.00৳</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td colspan="3" class="text-end">Total:</td>
+                  <td class="cart-total-value">0৳</td>
+                  <td></td>
+                </tr>
+              </tfoot>
+            </table>
+            <div class="container delivery-container mt-3">
+              <label for="delivery-location">Delivery Location:</label>
+              <select id="delivery-location" onchange="updateDeliveryCharge()">
                 <option value="inside">Inside Dhaka</option>
                 <option value="outside">Outside Dhaka</option>
-            </select>
+              </select>
+            </div>
+            <button class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
+          </div>
         </div>
-        <button class="btn btn-secondary" onclick="hideCart()">Continue Shopping</button> -->
-</div>
-
+      </div>
+    </div>
+  </div>
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
