--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
               <thead>
                 <tr>
                   <th>Product</th>
-                  <th>Price</th>
+                  <th>Unit Price</th>
                   <th>Quantity</th>
-                  <th>Subtotal</th>
+                  <th>Total</th>
                   <th></th>
                 </tr>
               </thead>
