--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                             </tr>
                             <tr>
                                 <td colspan="3" class="text-end">Delivery charges:</td>
-                                <td class="delivery-charge">60.00৳</td>
+                                <td class="delivery-charge">0.00৳</td>
                                 <td></td>
                             </tr>
                             <tr>
@@ -413,13 +413,13 @@
 
                     <div class="container delivery-container mt-3">
                         <div class="row row-cols-4 gy-4 pt-5">
-                            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-4">
+                            <!-- <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-4">
                                 <label for="delivery-location">Delivery Location:</label>
                                 <select class="form-select" id="delivery-location" onchange="updateDeliveryCharge()">
                                     <option value="inside">Inside Dhaka</option>
                                     <option value="outside">Outside Dhaka</option>
                                 </select>
-                            </div>
+                            </div> -->
 
 
                             
@@ -930,7 +930,7 @@
                     <div class="col p-0  mx-2" style="list-style-type: none;">
                         <li class="pt-4 footer-text"> > Contact us</li>
                         <li class="pt-4 footer-text"> > Our Process</li>
-                        <a href="./faq.html"><li class="pt-4 footer-text"> > FAQ </li></a>
+                        <a style="text-decoration: none;" href="./faq.html"><li class="pt-4 footer-text"> > FAQ </li></a>
                         <li class="pt-4 footer-text"> > Department</li>
 
                     </div>
