--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
         .form-control:focus {
             border-color: #de71ff;
-            box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+            box-shadow: 0 0 0 0.2rem #ed64ff00;
+            transition: 0.4s ease-in-out;
+        } 
+        .form-control:active {
+            border-color: #de71ff;
+            box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
             transition: 0.4s ease-in-out;
         } 
 
@@ -103,10 +108,13 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a style="text-decoration: none;" href="./index.html"><li class="pt-4 footer-text"> Home </li></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a style="text-decoration: none;" href="./contact_us.html"><li class="pt-4 footer-text"> Contact us </li></a>
+                </li>
+                <li class="nav-item">
+                    <a style="text-decoration: none;" href="./faq.html"><li class="pt-4 footer-text"> FAQ </li></a>
                 </li>
             </ul>
         </div>
@@ -396,11 +404,11 @@
                                 <td class="subtotal-value">0 ৳</td>
                                 <td></td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td colspan="3" class="text-end">Delivery charges:</td>
                                 <td class="delivery-charge">0.00৳</td>
                                 <td></td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <td colspan="3" class="text-end">Total:</td>
                                 <td class="cart-total-value">0৳</td>
@@ -421,12 +429,12 @@
 
 
                             
-                            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-4 pt-4">
+                            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-6 pt-4">
                                 <button class="button w-10" data-bs-dismiss="modal">Continue Shopping</button>
                             </div>
 
 
-                            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-4 pt-4">
+                            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-6 pt-4">
                                 <button class="button w-10" onclick="showCheckout()">Checkout</button>
                             </div>
 
@@ -510,7 +518,7 @@
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
                                 <label class="form-label">Services <span class="text-danger">*</span></label>
                                 <select id="selectServices" class="form-select" aria-label="Select Service" required>
-                                    <option selected disabled>Select an option</option>
+                                    <option selected disabled>Select</option>
                                     <option value="Service_CashOnDelivery">Cash On Delivery</option>
                                     <option value="Service_bkash">Bkash</option>
                                     <option value="Service_rocket">Rocket</option>
