--- a/contact_us.html
+++ b/contact_us.html
@@ -100,7 +100,7 @@
             <div class="container ">
                 <div class="row row-cols-4 gy-4">
                     <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
-                        <img src="./Product Images/4.0 Cosrx The Vitamin C 23 [Serum].jpg" class="img-fluid"
+                        <img src="./images/view-beautiful-3d-flower_23-2150856345.jpg" class="img-fluid"
                             style="border-radius: 8px;" alt="" srcset="">
                     </div>
                     <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
