--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
 
 
-        <!-- <div class="pt-4">
+        <div class="pt-4">
                 <div class="col">
                     <label for="claim_number" class="form-label">
                         Reading value
@@ -822,7 +822,7 @@
     </div>
 
 
-</div> -->
+</div>
 
 
 
