--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
         .offcanvas-header .btn-close {
             font-size: 1.5rem;
         }
+        .bootstrap-select .dropdown-toggle:focus {
+            border-color: #de71ff;
+            box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
+            transition: 0.4s ease-in-out;
+        }
+        :focus {
+          outline: none !important;
+          box-shadow: none !important;
+        }
     </style>
 
 
