--- a/faq.html
+++ b/faq.html
@@ -26,6 +26,37 @@
       box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
       transition: 0.4s ease-in-out;
   } 
+
+  font-family: 'Poppins', sans-serif;
+}
+
+.form-control:focus {
+    border-color: #de71ff;
+    box-shadow: 0 0 0 0.2rem #ed64ff00;
+    transition: 0.4s ease-in-out;
+} 
+.form-control:active {
+    border-color: #de71ff;
+    box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
+    transition: 0.4s ease-in-out;
+} 
+
+.offcanvas-start {
+    width: 250px;
+}
+
+.offcanvas-header .btn-close {
+    font-size: 1.5rem;
+}
+.bootstrap-select .dropdown-toggle:focus {
+    border-color: #de71ff;
+    box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
+    transition: 0.4s ease-in-out;
+}
+:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
   </style>
 
 <div class="container mt-5">
