--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_1.jpg" alt="Product 1">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream <span
+                        <h5 class="card-title" value="10" data-id="1">Cosrx Advance Snail 92 all in one cream <span
                                 class="weight">- 100ml</span> </h5>
 
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <div class="old-price">13.00৳</div>
-                            <div class="new-price px-2">10.00৳</div>
+                            <div class="new-price px-2" value="10">10.00৳</div>
                         </div>
 
 
@@ -418,11 +418,11 @@
                                 <td class="delivery-charge">0.00৳</td>
                                 <td></td>
                             </tr> -->
-                            <tr>
+                            <!-- <tr>
                                 <td colspan="3" class="text-end">Total:</td>
                                 <td class="cart-total-value">0৳</td>
                                 <td></td>
-                            </tr>
+                            </tr> -->
                         </tfoot>
                     </table>
 
@@ -520,18 +520,18 @@
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
                                 <label class="form-label" for="delivery-location">Delivery Location:</label>
                                 <select class="form-select" id="delivery-location" onchange="updateDeliveryCharge()">
-                                    <option value="inside">Inside Dhaka</option>
-                                    <option value="outside">Outside Dhaka</option>
+                                    <option value="Inside Dhaka">Inside Dhaka</option>
+                                    <option value="Outside Dhaka">Outside Dhaka</option>
                                 </select>
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
                                 <label class="form-label">Services <span class="text-danger">*</span></label>
                                 <select id="selectServices" class="form-select" aria-label="Select Service" required>
                                     <option selected disabled>Select</option>
-                                    <option value="Service_CashOnDelivery">Cash On Delivery</option>
-                                    <option value="Service_bkash">Bkash</option>
-                                    <option value="Service_rocket">Rocket</option>
-                                    <option value="Service_nexus_pay">Nexus Pay</option>
+                                    <option value="Cash On Delivery">Cash On Delivery</option>
+                                    <option value="Bkash">Bkash</option>
+                                    <option value="Rocket">Rocket</option>
+                                    <option value="Nexus Pay">Nexus Pay</option>
                                 </select>
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
