--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         rel="stylesheet">
     <!-- Custom CSS -->
 
+    <!-- bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- bootstrap JS  -->
+
 
 
 
@@ -25,7 +31,7 @@
     <link rel="stylesheet" href="style_2.css">
 
     <script src="./script.js"></script>
-    <link rel="stylesheet" href="./Asset/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="./Asset/bootstrap.min.css"> -->
 </head>
 
 <body>
@@ -41,12 +47,13 @@
             border-color: #de71ff;
             box-shadow: 0 0 0 0.2rem #ed64ff00;
             transition: 0.4s ease-in-out;
-        } 
+        }
+
         .form-control:active {
             border-color: #de71ff;
             box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
             transition: 0.4s ease-in-out;
-        } 
+        }
 
         .offcanvas-start {
             width: 250px;
@@ -55,14 +62,16 @@
         .offcanvas-header .btn-close {
             font-size: 1.5rem;
         }
+
         .bootstrap-select .dropdown-toggle:focus {
             border-color: #de71ff;
             box-shadow: 0 0 0 0.2rem rgba(255, 145, 209, 0.25);
             transition: 0.4s ease-in-out;
         }
+
         :focus {
-          outline: none !important;
-          box-shadow: none !important;
+            outline: none !important;
+            box-shadow: none !important;
         }
     </style>
 
@@ -73,33 +82,26 @@
             <!-- Toggler Button for mobile view -->
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-
                 <!-- <span class="navbar-toggler-icon"></span> -->
-
                 <i class="fa-solid fa-bars"></i>
             </button>
-
             <!-- Middle (Company Logo) -->
             <div class="d-flex justify-content-center flex-grow-0">
                 <a class="navbar-brand mx-auto" href="#">
                     <img src="./logo/shalik.svg" alt="SHALIK" style="height: 40px;">
                 </a>
             </div>
-
             <!-- Right side with Cart Icon -->
             <div class="d-flex align-items-center ms-auto">
                 <!-- Cart Icon with Badge -->
-                <a class="nav-link position-relative me-3" href="#">
+                <a class="nav-link position-relative me-3">
                     <button class="cart-button" data-bs-toggle="modal" data-bs-target="#cartModal"><i
                             class="fa-solid fa-basket-shopping"></i></i></button>
-
-
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill c-badge">
                         <span class="cart-badge">0</span>
                         <span class="visually-hidden">unread messages</span>
                     </span>
                 </a>
-
                 <!-- Cart Total Display -->
                 <div>
                     <span class="cart-total subtotal-value">0.00৳</span>
@@ -117,13 +119,16 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a style="text-decoration: none;" href="./index.html"><li class="pt-4 footer-text"> Home </li></a>
+                    <a style="text-decoration: none;" href="./index.html">
+                <li class="pt-4 footer-text"> Home </li></a>
                 </li>
                 <li class="nav-item">
-                    <a style="text-decoration: none;" href="./contact_us.html"><li class="pt-4 footer-text"> Contact us </li></a>
+                    <a style="text-decoration: none;" href="./contact_us.html">
+                <li class="pt-4 footer-text"> Contact us </li></a>
                 </li>
                 <li class="nav-item">
-                    <a style="text-decoration: none;" href="./faq.html"><li class="pt-4 footer-text"> FAQ </li></a>
+                    <a style="text-decoration: none;" href="./faq.html">
+                <li class="pt-4 footer-text"> FAQ </li></a>
                 </li>
             </ul>
         </div>
@@ -424,7 +429,8 @@
                                 <button class="button w-10" data-bs-dismiss="modal">Continue Shopping</button>
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-6 pt-4">
-                                <button class="button w-10" id="checkout-button" onclick="showCheckout()" style="display: none;">Checkout</button>
+                                <button class="button w-10" id="checkout-button" onclick="showCheckout()"
+                                    style="display: none;">Checkout</button>
                             </div>
                         </div>
                     </div>
@@ -460,21 +466,25 @@
 
                         <div class="row row-cols-4 gy-4 pt-5">
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
-                                <label for="first_name" class="form-label">First Name <span class="text-danger">*</span></label>
+                                <label for="first_name" class="form-label">First Name <span
+                                        class="text-danger">*</span></label>
                                 <input type="text" class="form-control text-black" id="first_name" required />
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
-                                <label for="last_name" class="form-label">Last Name <span class="text-danger">*</span></label>
+                                <label for="last_name" class="form-label">Last Name <span
+                                        class="text-danger">*</span></label>
                                 <input type="text" class="form-control text-black" id="last_name" required />
                             </div>
                         </div>
                         <div class="row row-cols-4 gy-4 pt-4">
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
-                                <label for="phone_number" class="form-label">Contact number <span class="text-danger">*</span></label>
+                                <label for="phone_number" class="form-label">Contact number <span
+                                        class="text-danger">*</span></label>
                                 <input type="text" class="form-control text-black" id="phone_number" required />
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
-                                <label for="address" class="form-label">Address <span class="text-danger">*</span></label>
+                                <label for="address" class="form-label">Address <span
+                                        class="text-danger">*</span></label>
                                 <input type="text" class="form-control text-black" id="address" required />
                             </div>
                         </div>
@@ -498,11 +508,13 @@
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
                                 <label for="account_number" class="form-label">Account number</label>
-                                <input type="text" class="form-control text-black" placeholder="+88 01XXXXXXXXX" id="account_number" required />
+                                <input type="text" class="form-control text-black" placeholder="+88 01XXXXXXXXX"
+                                    id="account_number" required />
                             </div>
                             <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-3">
                                 <label for="transaction_id" class="form-label">Transaction ID</label>
-                                <input type="text" placeholder="AH53XXXXX" class="form-control text-black" id="transactionId" required />
+                                <input type="text" placeholder="AH53XXXXX" class="form-control text-black"
+                                    id="transactionId" required />
                             </div>
                         </div>
                         <div class="row row-cols-4 gy-4 pt-5">
@@ -534,7 +546,7 @@
 
 
 
-    
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -731,7 +743,7 @@
             </div> -->
 
 
-        <!-- <div class="pt-4">
+<!-- <div class="pt-4">
                 <div class="col">
                     <label class="form-label">
                         SMS Account no.
@@ -763,7 +775,7 @@
             </div> -->
 
 
-        <!-- <div class="pt-4">
+<!-- <div class="pt-4">
                 <div class="col">
                     <label for="transaction_id" class="form-label">
                         Transaction ID
@@ -786,14 +798,14 @@
                     </select>
                 </div>
             </div> -->
-        <!-- 
+<!-- 
             <div class="row pt-5">
                 <button type="submit" class="button-submit" id="submit_button" style="font-weight: 500;">PLACE ORDER</button>
             </div> -->
 
 
 
-    </div>
+</div>
 
 
 </div>
@@ -903,14 +915,20 @@
                     <div class="col-12 col-lg-6 col-md-6 p-0 mx-2 " style="list-style-type: none;">
                         <li class="pt-4 footer-text"> > About us</li>
                         <li class="pt-4 footer-text"> > Our Services</li>
-                        <a style="text-decoration: none;" href="./index.html"><li class="pt-4 footer-text"> > Our Products </li></a>
+                        <a style="text-decoration: none;" href="./index.html">
+                            <li class="pt-4 footer-text"> > Our Products </li>
+                        </a>
                         <li class="pt-4 footer-text"> > Events</li>
                     </div>
                     <div class="col p-0  mx-2" style="list-style-type: none;">
-                        <a style="text-decoration: none;" href="./contact_us.html"><li class="pt-4 footer-text"> > Contact us </li></a>
-                        
+                        <a style="text-decoration: none;" href="./contact_us.html">
+                            <li class="pt-4 footer-text"> > Contact us </li>
+                        </a>
+
                         <li class="pt-4 footer-text"> > Our Process</li>
-                        <a style="text-decoration: none;" href="./faq.html"><li class="pt-4 footer-text"> > FAQ </li></a>
+                        <a style="text-decoration: none;" href="./faq.html">
+                            <li class="pt-4 footer-text"> > FAQ </li>
+                        </a>
                         <li class="pt-4 footer-text"> > Department</li>
 
                     </div>
