--- a/index.html
+++ b/index.html
@@ -378,6 +378,22 @@
                 </div>
             </div>
 
+            <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
+                <div class="product-card card h-100" id="bor">
+                    <img src="./Product Images/prd_13_2.webp" alt="Product 12">
+                    <div class="card-body">
+                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum <span
+                                class="weight">- 5gm</span> </h5>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">120.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">120 ৳</p> -->
+                        <button class="button" onclick="addToCart(12)">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
@@ -1034,7 +1050,7 @@
     crossorigin="anonymous"></script>
 
 <script>
-    document.getElementById("submit_button").addEventListener("click", function (event) {
+    document.getElementById("submit").addEventListener("click", function (event) {
         // Prevent default form submission
         event.preventDefault();
 
