title updated prd_13

--- a/index.html
+++ b/index.html
@@ -382,14 +382,14 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_13_2.webp" alt="Product 12">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum <span
+                        <h5 class="card-title" data-id="12"> COSRX - Low pH Good Morning Gel Cleanser - 50ml <span
                                 class="weight">- 5gm</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">120.00৳</div>
                         </div>
                         <!-- <p class="card-text text-end">120 ৳</p> -->
-                        <button class="button" onclick="addToCart(12)">Add to Cart</button>
+                        <button class="button" onclick="addToCart(13)">Add to Cart</button>
                     </div>
                 </div>
             </div>
