--- a/index.html
+++ b/index.html
@@ -275,10 +275,9 @@
             </div>
             <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
                 <div class="product-card card h-100" id="bor">
-                    <img src="./Product Images/prd_6.jpg" alt="Product 6">
+                    <img src="./Product Images/prd_6_3.jpg" alt="Product 6">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser <span class="weight">-
-                                200ml</span> </h5>
+                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser <span class="weight">- 200ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">60.00৳</div>
